# bottle-caps-detection

./: .gitignore  Dockerfile  README.md  README_PIPELINE.md  api.py  pyproject.toml  requirements.txt  settings.yaml  start.ps1  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
bottle-sorter/: .gitignore  README.md  pyproject.toml
bottle-sorter/.devcontainer/: Dockerfile
bottle-sorter/bsort/: config.py
bottle-sorter/bsort/models/: inference.py
bottle-sorter/bsort/pipeline/: export.py  profiling.py
bottle-sorter/bsort/train/: wandb_logger.py
bottle-sorter/scripts/: run_local_pipeline.py  setup_wsl_docker.ps1
bottle-sorter/tests/: test_inference.py
bsort/: __init__.py  cli.py  config.py
bsort/data/: dataset_builder.py  transforms.py
bsort/models/: utils.py  yolov8.py
bsort/pipeline/: prepare.py  profiling.py
bsort/train/: evaluator.py  trainer.py  wandb_logger.py
data/: dataset.yaml
data/train/: labels.cache
data/train/labels/: raw-250110_dc_s001_b4_2.txt  raw-250110_dc_s001_b4_3.txt  (+1 more)
data/val/: labels.cache
docs/: README_FULLSTACK.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
notebooks/: Model_Development_and_Experimentation.ipynb
outputs/: notebook_analysis_summary.md  profiling_report.md
outputs/analysis/: dataset_analysis_summary.md
scripts/: README_SETUP_WSL_DOCKER.md  setup_docker_in_wsl.sh  update_labels_for_colors.py
tests/: test_cli.py  test_cli_integration.py  test_config.py  test_training.py  test_transforms.py  test_utils_preprocess.py
(+10 files in other folders)
