[tool.poetry]
name = "bottle-sorter"
version = "0.1.0"
description = "Real-time bottle cap detection and sorting using YOLOv8."
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "bsort"}]

[tool.poetry.scripts]
bsort = "bsort.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
ultralytics = "*"
typer = "*"
pillow = "*"
pyyaml = "*"
albumentations = "*"
wandb = "*"
onnxruntime = "*"
tensorrt = "*"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
